[package]
name = "libsolv-sys"
description = "Raw libsolv bindings for Rust, used internally rust-libsolv"
repository = "https://github.com/ignatenkobrain/libsolv-rs"
version = "0.0.1"
edition = "2018"
authors = ["Igor Gnatenko <ignatenko@redhat.com>", "Adam Baxter"]
license = "MIT"
build = "build.rs"

[lib]
name = "libsolv_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.51"

[build-dependencies]
cc = { version = "1.0.35", features = ["parallel"] }
pkg-config = "0.3.14"
bindgen = "0.49.0"
